# Specs_vcpkg_template

./: CMakeLists.txt  CMakePresets.json  README.md  SpecHelper.h  vcpkg-configuration.json
